@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T16:12:08Z",
-  "count_outdated" : 1523,
-  "uniques_outdated" : 80,
+  "timestamp" : "2022-05-27T16:10:52Z",
+  "count_outdated" : 1525,
+  "uniques_outdated" : 81,
   "count" : 1590,
   "uniques" : 89,
   "views" : [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 4,
